syntax = "proto3";
package kcp;

// HandshakeExtraData contains the extra data field of the pconn handshake.
message HandshakeExtraData {
  // LocalTransportUuid is the transport uuid of the sender.
  // This is used for monitoring / analysis at a later time.
  // Coorelates the transport connections between two machines.
  uint64 local_transport_uuid = 1;

  // MaxInflightRawStreamEstablish is the maximum number of outgoing raw stream
  // establish messages to send before applying backpressure. If zero, assumes
  // default of 5 streams. May be capped to behave as if this value was lower.
  // Un-acked stream establish messages past this cap will be dropped.
  // TODO
  // uint32 max_inflight_raw_stream_establish = 2;
}

